--- a/signatures/mapping.json
+++ b/signatures/mapping.json
@@ -1,3 +1,6 @@
 {
-	"0xe21dc18513e3e68a52f9fcdacfd56948d43a11c6": "justin-bieber.png"
+	"0xe21dc18513e3e68a52f9fcdacfd56948d43a11c6": {
+		"image": "justin-bieber.png",
+		"name": "Justin Bieber"
+	}
 }
