--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@chainlink/contracts": "^0.3.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "moralis": "^1.2.4"
+    "moralis": "^1.2.4",
+    "sharp": "^0.30.0"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.4",
